force-app/main/default/objects/custom_create355__c/custom_create355__c.object-meta.xml
<CustomObject>
    <label>Custom created object355</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects355</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>