force-app/main/default/objects/custom_create355__c/fields/custom_create_355field522__c.field-meta.xml
<CustomField>
    <fullName>custom_create_355field522__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 355field522</label>
    <type>Checkbox</type>
</CustomField>